--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
     <title>
         my page
     </title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script>
         function openNav() {
             document.getElementById("mySidenav").style.width = "250px";
@@ -39,22 +40,37 @@
 <body>
     <header>
         <center>
+            <i class="fa fa-ambulance" aria-hidden="true"></i>
             <h2>EMED.COM</h2>
         </center>
-        <div id="mySidenav" class="sidenav">
-            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <a href="#">Home</a>
-            <div class="dropdown">
-                <div class="dropbtn">Category</div>
-                <div class="dropdown-content">
-                    <a href="diabetics.html" style="color: blanchedalmond;font-size: medium;">Covid Supply</a>
-                    <a href="diabetics.html" style="color: blanchedalmond;font-size: medium;">Diabetics</a>
-                    <a href="diabetics.html" style="color: blanchedalmond; font-size: medium;">Cold & Fever</a>
-                    <a href="diabetics.html" style="color: blanchedalmond;font-size: medium;">Blood pressure</a>
-                    <a href="diabetics.html" style="color: blanchedalmond;font-size: medium;">CardioVascukar Meds</a>
+        <div>
+            <div class="topnav">
+                <div class="search-container">
+                    <form action="/action_page.php">
+                        <input type="text" placeholder="Search.." name="search">
+                        <button type="submit"><i class="fa fa-search"></i></button>
+                    </form>
                 </div>
             </div>
-            <a href="https://www.medscape.com/">MedUpdates</a>
+            <div id="mySidenav" class="sidenav">
+
+                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                <a href="#">Home <i class="fa fa-home" aria-hidden="true"></i></a>
+                <div class="dropdown">
+                    <div class="dropbtn">Category <i class="fa fa-list-alt" aria-hidden="true"></i>
+                    </div>
+                    <div class="dropdown-content">
+                        <a href="diabetics.html" style="color: blanchedalmond;font-size: medium;">Covid Supply</a>
+                        <a href="diabetics.html" style="color: blanchedalmond;font-size: medium;">Diabetics</a>
+                        <a href="diabetics.html" style="color: blanchedalmond; font-size: medium;">Cold & Fever</a>
+                        <a href="diabetics.html" style="color: blanchedalmond;font-size: medium;">Blood pressure</a>
+                        <a href="diabetics.html" style="color: blanchedalmond;font-size: medium;">CardioVascukar
+                            Meds</a>
+                    </div>
+                </div>
+                <a href="https://www.medscape.com/">MedUpdates <i class="fa fa-newspaper-o" aria-hidden="true"></i></a>
+                <a href="login.html">Log Out <i class="fa fa-sign-out" aria-hidden="true"></i></a>
+            </div>
         </div>
         <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Menu</span>
     </header>
@@ -64,19 +80,19 @@
 
             <div class="mySlides fade">
                 <div class="numbertext">1 / 3</div>
-                <img src="images/med5.jpeg" style="width:1400px;height:400px;">
+                <img src="images/med5.jpeg" style="width:100%;height:400px;">
                 <div class="text">offer item 1</div>
             </div>
 
             <div class="mySlides fade">
                 <div class="numbertext">2 / 3</div>
-                <img src="images/med6.jpeg" style="width:1400px;height:400px;">
+                <img src="images/med6.jpeg" style="width:100%;height:400px;">
                 <div class="text">offer item 2</div>
             </div>
 
             <div class="mySlides fade">
                 <div class="numbertext">3 / 3</div>
-                <img src="images/38b226df-afe0-4e93-8215-1f4e254ff4da.jpg" style="width:1400px;height:400px;">
+                <img src="images/38b226df-afe0-4e93-8215-1f4e254ff4da.jpg" style="width:100%;height:400px;">
                 <div class="text">offer item 3</div>
             </div>
 
