--- a/index.html
+++ b/index.html
@@ -1,45 +1,41 @@
-<html>
+<!DOCTYPE html>
 
 <head>
     <title>Medical Store</title>
-
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body style="font-family: verdana">
-
-
-
-
-
-    <h1 style="text-align: center;font-size: 70px">Medical store</h1>
-    <hr>
-    <br>
+    <header>
+        <h1 style="text-align: center;font-size: 70px">Medical store</h1>
+    </header>
 
     <h3>Login in to your account</h3>
-    <form action="home.html" method="POST">
-    <input class="text" name="id" placeholder="Enter username" style="font-size: 15px" required>
-    <br>
-    <input class="password" name="pass" type="password" placeholder="enter password" style="font-size: 15px" required>
-    <a href="signup.html" style="font-size: 13px;padding-left: 15px">Forgot password?</a><br><br>
-
-    <input class="submit" type="submit" name="submit" value="submit">
+    <form action="home.html" method=" POST">
+        <input class="text" name="id" placeholder="Enter username" style="font-size: 15px" required>
+        <br>
+        <input class="password" name="pass" type="password" placeholder="enter password" style="font-size: 15px"
+            required>
+        <input class="submit" type="submit" name="submit" value="submit">
     </form>
+    <a href="signup.html" style="font-size: 13px;padding-left: 15px">Forgot password?</a><br><br>
     <h5>not an account?</h5>
 
     <a href="signup.html">Signup</a>
 
 
-    <br><br>
-    <h2>About</h2>
-    This is a medical store website developed using html and css
-    <br>
-    <p>for more information contact us:<br> Medicalstore@gmail.com
+    <footer>
+        <h2>About</h2>
+        This is a medical store website developed using html and css
+        <br>
+        <p>for more information contact us:<br> Medicalstore@gmail.com
 
-        <br>Mobileno-98246XXXXX</p>
-    <marquee scrollamount="15">
-        <h4>We ensure contact free delivery and highest quality. Daily offers on medicine avaliable. Avail now</h4>
-    </marquee>
-
+            <br>Mobileno-98246XXXXX</p>
+        <marquee scrollamount="15">
+            <h4>We ensure contact free delivery and highest quality. Daily offers on medicine avaliable. Avail now</h4>
+        </marquee>
+    </footer>
 </body>
+
 
 </html>
