--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
-<!DOCTYPE html>
+<html>
 
 <head>
     <title>Medical Store</title>
-    <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body style="font-family: verdana">
-    <header>
-        <h1 style="text-align: center;font-size: 70px">Medical store</h1>
-    </header>
 
+
+
+
+
+    <h1 style="text-align: center;font-size: 70px">Medical store</h1>
+    <hr>
+    <br>
     <h3>Login in to your account</h3>
     <form action="home.html" method=" POST">
         <input class="text" name="id" placeholder="Enter username" style="font-size: 15px" required>
@@ -22,20 +26,17 @@
     <h5>not an account?</h5>
 
     <a href="signup.html">Signup</a>
+    <br><br>
+    <h2>About</h2>
+    This is a medical store website developed using html and css
+    <br>
+    <p>for more information contact us:<br> Medicalstore@gmail.com
 
+        <br>Mobileno-98246XXXXX</p>
+    <marquee scrollamount="15">
+        <h4>We ensure contact free delivery and highest quality. Daily offers on medicine avaliable. Avail now</h4>
+    </marquee>
 
-    <footer>
-        <h2>About</h2>
-        This is a medical store website developed using html and css
-        <br>
-        <p>for more information contact us:<br> Medicalstore@gmail.com
-
-            <br>Mobileno-98246XXXXX</p>
-        <marquee scrollamount="15">
-            <h4>We ensure contact free delivery and highest quality. Daily offers on medicine avaliable. Avail now</h4>
-        </marquee>
-    </footer>
 </body>
-
 
 </html>
